# BD

postgres_app/: .env  Cargo.toml
postgres_app/hospital/: db  snap.00000000000018E9
postgres_app/src/: api.rs  handlers.rs  main.rs  models.rs
