[package]
name = "postgres_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "time",
] }
dotenv = "0.15"

actix-web = "4"
utoipa = { version = "4.2.3" }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
