[package]
name = "postgres_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "time",
] }
dotenv = "0.15"

sled = "0.34.7"
actix-web = "4"
utoipa = { version = "5.1.3" }
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
